feat: add project domain and pinned projects